--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -13,6 +13,14 @@ img {
   &--small {
     max-width: 50%;
     margin: 0 auto;
+
+    @media screen and (max-width: 1280px) {
+      max-width: 66%;
+    }
+
+    @media screen and (max-width: 768px) {
+      max-width: 75%;
+    }
   }
 
   &--medium {
