--- a/style.scss
+++ b/style.scss
@@ -44,6 +44,8 @@ body.admin-bar {
 @import './scss/article.scss';
 @import './scss/gallery.scss';
 @import './scss/video.scss';
+@import './scss/vita.scss';
+@import './scss/vita-list.scss';
 @import './scss/zoomable.scss';
 @import './scss/newsletter-box';
 
