--- a/scss/article.scss
+++ b/scss/article.scss
@@ -4,27 +4,64 @@
   }
 }
 
+.article--post {
+  .article-share {
+    margin-left: 1.5em;
+    display: inline-block;
+
+    ul:before {
+      content: " | ";
+      display: inline-block;
+      margin-right: 1em;
+    }
+  }
+
+  a.back {
+    display: inline-block;
+  }
+
+  .navigation-items {
+    display: inline-block;
+  }
+}
+
 .article {
 
   &--post {
     .article-header {
+
+      @media screen and (max-width: 991px) {
+        .container--small {
+          padding-right: 15px !important;
+          padding-left: 15px !important;
+          margin-top: -4em;
+        }
+      }
+
       h2 {
         padding-bottom: 0;
+        font-weight: normal;
       }
     }
 
     .article-header {
-      margin: 5em 0 5em;
+      margin: 6em 0 5em;
     }
-
+ 
     .article-headline {
-      padding: 0;
+      padding: 0 0 2em 0;
     }
 
     .article-share {
       .list {
         text-align: left;
       }
+    }
+  }
+
+  &--page {
+    h1 {
+      margin-bottom: 2.4em;
     }
   }
 
@@ -40,7 +77,7 @@
   }
 
   &-featured-image {
-    margin-bottom: 5em;
+    margin-bottom: 8em;
   }
 
   &-header--fullscreen {
@@ -60,6 +97,7 @@
 
     h1 {
       margin-bottom: 0;
+      padding-right: 1em;
     }
 
     h2 {
@@ -75,6 +113,27 @@
     &--right {
       margin-bottom: -100%;
       padding-left: 3em;
+      padding-right: 3em;
+      text-align: right;
+
+      a.back {
+        &:after {
+          display: none !important;
+        }
+
+        &:before {
+          content: "";
+          position: relative;
+          display: inline-block;
+          top: 0.175em;
+          width: 1.2em;
+          height: 1em;
+          background-image: url(./img/icn_arrow_left.svg);
+          background-size: 1em;
+          background-repeat: no-repeat;
+          background-position: right center;
+        }
+      }
     } 
 
     a:not(.icon) {
@@ -86,7 +145,7 @@
         position: relative;
         display: inline-block;
         top: 0.175em;
-        width: 1.5em;
+        width: 1.2em;
         height: 1em;
         background-image: url(./img/icn_arrow_right.svg);
         background-size: 1em;
@@ -97,6 +156,7 @@
   }
   
   &-content {
+
     &--wrapper {
       transition: transform .4s;
     }
@@ -208,6 +268,15 @@
   }
 
   &--project {
+    @media screen and (max-width: 991px) {
+      .article-content-wrapper {
+        > .row {
+          div:last-child {
+            order: -1;
+          }
+        }
+      }
+    }
   }
 
   &--preview {
@@ -284,6 +353,7 @@
 
           p {
             padding-top: 2em;
+            padding-bottom: 0;
           }
 
           ul {
@@ -418,6 +488,16 @@
       margin: 0;
       padding: 0 0 1em 0;
 
+      &--right {
+        display: flex;
+        flex-direction: row-reverse;
+
+        a.back {
+          flex: 1;
+          text-align: left;
+        }
+      }
+
       .navigation-items {
         text-align: left;
       }
@@ -433,7 +513,7 @@
     }
 
     &-share {
-      margin: 0 0 2.5em;
+      margin: 0;
     }
 
     .article-content-paragraph--image,
