--- a/scss/gallery.scss
+++ b/scss/gallery.scss
@@ -50,6 +50,10 @@
     margin-top: 2em;
     padding: 3em 2.5em;
 
+    @media screen and (max-width: 667px) {
+      padding-bottom: 0;
+    }
+
     .gallery-images {
       display: flex;
       flex-direction: column;
@@ -82,6 +86,11 @@
 
         &:nth-last-child(n+1) {
           border-bottom: 0;
+          margin-bottom: 5em;
+
+          @media screen and (max-width: 667px) {
+            margin-bottom: 3em;
+          }
         }
 
         @media screen and (max-width: 1024px) {
