--- a/scss/newsletter-box.scss
+++ b/scss/newsletter-box.scss
@@ -10,6 +10,10 @@
   display: flex;
   flex-direction: column;
 
+  p {
+    max-width: 43em;
+  }
+
   small {
     font-size: 0.7em;
     line-height: 1.4em;
